--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "cds": {
     "requires": {
-      "auth": "xsuaa",
-      "db": "hana"
+      "[production]": {
+        "db": "hana",
+        "auth": "xsuaa"
+      }
     }
   }
 }
